--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.scss
@@ -15,4 +15,10 @@
     .padding-left {
         padding-left: 4%;
     }
+    .table-padding-start {
+        padding-left: 4%;
+    }
+    .table-padding-end {
+        padding-left: 6%;        
+    }
 }
