--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -137,7 +137,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-6" *ngIf="details?.isUnsecuredSchemeApplied">
+            <div class="col-6" *ngIf="!scrapIds">
                 <div class="row justify-content-center kt-margin-t-10">
                     <div class="col-4 form-label">
                         <label class="kt-padding-l-10 mandatory">Processing Charge</label>
@@ -344,6 +344,6 @@
                     </div> -->
     </div>
 </form>
-<div class="p-3" >
+<div class="p-3">
     <kt-modal-footer *ngIf="showButton && !disbursed" (action)="action($event)" [value]="'Done'"></kt-modal-footer>
 </div>
