--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
@@ -114,17 +114,33 @@
                                 <mat-icon>more_vert</mat-icon>
                             </button>
                             <mat-menu #menu="matMenu" xPosition="before">
-                                <ng-container *ngIf="row.module.id === 1">
+
+                                <ng-container *ngIf="row?.module.id === 1 && row?.status === 'complete'">
+                                    <ng-container *ngIf="!row?.masterLoan?.isLoanTransfer">
+                                        <button *ngxPermissionsOnly="['loanApplicationAdd']" mat-menu-item
+                                            (click)="applyLoan(row)">Apply Loan</button>
+                                    </ng-container>
+
+                                    <ng-container *ngIf="row?.masterLoan?.isLoanTransfer">
+                                        <button *ngxPermissionsOnly="['addLoanTransfer']" mat-menu-item
+                                            (click)="applyLoanTransfer(row)"> Loan Transfer</button>
+                                    </ng-container>
+                                </ng-container>
+
+                                <ng-container *ngIf="row?.module.id === 1 && row?.status === 'incomplete'">
                                     <button *ngxPermissionsOnly="['loanApplicationAdd']" mat-menu-item
                                         (click)="applyLoan(row)">Apply Loan</button>
                                     <button *ngxPermissionsOnly="['addLoanTransfer']" mat-menu-item
                                         (click)="applyLoanTransfer(row)"> Loan Transfer</button>
                                 </ng-container>
-
-                                <ng-container *ngxPermissionsOnly="['scrapApplicationAdd']">
-                                    <button *ngIf="row.module.id === 3" mat-menu-item (click)="applyScrapBuy(row)">Apply
+                                
+                                <!-- scrap -->
+                                <ng-container *ngIf="row.module.id === 3">
+                                    <button *ngxPermissionsOnly="['scrapApplicationAdd']" mat-menu-item
+                                        (click)="applyScrapBuy(row)">Apply
                                         Scrap Gold</button>
                                 </ng-container>
+
                             </mat-menu>
 
                             <!-- <ng-container *ngxPermissionsOnly="['loanApplicationAdd']">
