bm::minor chnages

--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
@@ -8,7 +8,7 @@
                         <th class="transparent th-style">Loan Amount</th>
                         <th class="transparent th-style">Loan Date</th>
                         <th class="transparent th-style">Last Part Payment Date</th>
-                        <th class="transparent th-style">Outstanding Loan Amount</th>
+                        <th class="transparent th-style">Principal Outstanding</th>
                     </thead>
                     <tbody>
                         <tr>
