--- a/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/payment-dialog/payment-dialog.component.html
@@ -166,9 +166,9 @@
                                         (change)="setValidation($event)"
                                         [class.isError]="controls.depositStatus.touched && controls.depositStatus.invalid">
                                         <option value="" selected disabled>Select Status</option>
-                                        <option value="Pending">PENDING</option>
-                                        <option value="Completed">COMPLETED</option>
-                                        <option value="Rejected">REJECTED</option>
+                                        <option value="Pending">Pending</option>
+                                        <option value="Completed">Completed</option>
+                                        <option value="Rejected">Rejected</option>
                                     </select>
 
                                     <mat-error
