new -request::update appraiser bug

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
@@ -34,7 +34,8 @@
                     <mat-header-cell *matHeaderCellDef>Appointment Time</mat-header-cell>
                     <mat-cell *matCellDef="let row">
                         <span *ngIf="row.startTime">
-                            {{row.startTime | time24to12}} -
+                            {{row.startTime | time24to12 }}
+                            <span *ngIf="row.startTime">-</span>
                             {{ row.endTime | time24to12 }}</span>
                         <span *ngIf="!row.startTime">-</span>
                     </mat-cell>
