--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.scss
@@ -1,4 +1,8 @@
 :host {
+    mat-header-row, mat-row {
+        width: 100%;
+    }
+
     .mat-column-apply {
         display: flex;
         justify-content: center;
@@ -14,5 +18,9 @@
 
     .mat-column-product {
         flex: 0 0 8%;
+    }
+
+    .mat-column-apply{
+        flex: 0 0 7%;
     }
 }
