--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/customer-management/customer-list/customer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/customer-management/customer-list/customer-list.component.html
@@ -32,9 +32,9 @@
                     <mat-header-cell [ngClass]="'w-200'" *matHeaderCellDef>Action</mat-header-cell>
                     <mat-cell *matCellDef="let customer" [ngClass]="'w-200'">
                         <p>
-                            <span class="kt-pointer" (click)="newScrap(customer)"
+                            <!-- <span class="kt-pointer" (click)="newScrap(customer)"
                                 *ngxPermissionsOnly="['scrapApplicationAdd']">Add New Scrap</span>
-                            <span *ngxPermissionsOnly="['scrapApplicationAdd']" class="px-1">|</span>
+                            <span *ngxPermissionsOnly="['scrapApplicationAdd']" class="px-1">|</span> -->
                             <span class="kt-pointer" (click)="viewDetails(customer.id)">View Details</span>
                             <!-- <span class="kt-pointer" (click)="editCustomer(customer)">Edit</span>&nbsp;|&nbsp;
                             <span class="text-danger kt-pointer" (click)="deleteCustomer(customer)">Delete</span> -->
